Fixed hover z-index in product card

--- a/wp-content/themes/neomuscle/assets/sass/components/_media.scss
+++ b/wp-content/themes/neomuscle/assets/sass/components/_media.scss
@@ -256,7 +256,7 @@
           left: 0;
           background-color: #ffffff;
           box-shadow: 0 0 6px 0 rgba(1,1,1,.3);
-          z-index: 3;
+          z-index: 2;
           .product-description {
             display: block;
           }
